--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 
 https://control.divio.com/api/v1/apps/serve/aldryn-addons/1.1.0/7a2d5a44-16e2-4ef8-bfe0-1e61c8601b33/aldryn-addons-1.1.0.tar.gz#egg=aldryn-addons==1.1.0
 aldryn-client==2.3.5
-https://control.divio.com/api/v1/apps/serve/aldryn-django/1.11.20.4/88bb59c4-1ab6-4a34-a562-d286b8c2849e/aldryn-django-1.11.20.4.tar.gz#egg=aldryn-django==1.11.20.4
+https://control.divio.com/api/v1/apps/serve/aldryn-django/2.2.1.1/17e41177-1e0d-40c6-807f-734809b82605/aldryn-django-2.2.1.1.tar.gz#egg=aldryn-django==2.2.1.1
 aldryn-sites==0.6.0
 https://control.divio.com/api/v1/apps/serve/aldryn-sso/1.6.0/6d90e844-d7ef-4faa-b527-5df3d49277be/aldryn-sso-1.6.0.tar.gz#egg=aldryn-sso==1.6.0
 argparse==1.4.0           # via djeese-fs
@@ -20,14 +20,13 @@ dj-database-url==0.5.0
 dj-email-url==0.2.0
 dj-redis-url==0.1.4
 dj-static==0.0.6
-django-appconf==1.0.3     # via aldryn-sites, django-select2
+django-appconf==1.0.3     # via aldryn-sites
 django-cache-url==3.0.0
 django-getenv==1.3.2
-django-select2==6.3.1
 django-simple-sso==0.14.0
 django-storages==1.7.1
 django-widget-tweaks==1.4.3
-django==1.11.20           # via aldryn-sites, django-appconf, django-simple-sso, django-storages, easy-thumbnails, webservices
+django==2.2.1             # via aldryn-sites, django-appconf, django-simple-sso, django-storages, easy-thumbnails, webservices
 djeese-fs==0.1.21
 easy-thumbnails==2.6
 furl==2.0.0
@@ -40,6 +39,7 @@ pytz==2019.1
 requests==2.21.0          # via aldryn-client, webservices
 sentry-sdk==0.7.14
 six==1.12.0               # via aldryn-client, django-appconf, furl, orderedmultidict
+sqlparse==0.3.0           # via django
 static3==0.7.0            # via dj-static
 tabulate==0.8.3           # via aldryn-client
 urllib3==1.24.3           # via requests, sentry-sdk
