--- a/theme/tools/package.json
+++ b/theme/tools/package.json
@@ -71,7 +71,7 @@
     "prismjs": "^1.8.4",
     "rangeslider.js": "^2.3.1",
     "raphael": "^2.2.7",
-    "select2": "^4.0.6-rc.1",
+    "select2": "^4.0.7",
     "smooth-scroll": "^14.2.0",
     "socicon": "^3.0.5",
     "summernote": "^0.8.9",
